--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "rewrites": [
+	{ "source": "/", "destination": "/home" },
         { "source": "/home", "destination": "pages/home/index.html" },
         { "source": "/components", "destination": "pages/components/index.html" }
     ]
